<resources>
    <string name="app_name">zariya</string>

    <string name="facebook_app_id">2483416021824234</string>
    <string name="fb_login_protocol_scheme">fb2483416021824234</string>
    <string name="facebook_client_token">103df86b1787f1f5eb68bc3b75dac095</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <string name="intro_acting"><![CDATA[We prepare you for the game called life and believe that, <b>Drama holds many lives within</b>]]></string>
    <string name="intro_casting"><![CDATA[<b>Casting you into your dreams - be the lead role of your journey.</b>]]></string>
    <string name="intro_meditation"><![CDATA[<b>A Journey Within</b>- Your First Step in Cultivating Consciousness for Humanity.]]></string>
    <string name="intro_merchandise"><![CDATA[<b>Shop what you believe.</b> Unlock a universe of products that suit your lifestyle]]></string>

    <string name="login_heading">Let\'s get started</string>
    <string name="login_sub_heading">Please enter your phone number and password to login</string>
    <string name="signup_sub_heading">Please enter your phone number and password to register</string>
    <string name="agree_terms">I agree to Terms &amp; Conditions</string>

    <!--    Hint-->
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="official_email">Official Email</string>
    <string name="search">Search</string>
    <string name="actor">Actor</string>
    <string name="casting_agency">Casting Agency</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="complexion">Complexion</string>
    <string name="or">OR</string>
    <string name="started_in">Started in</string>
    <string name="started_in_value"><![CDATA[<b>Started in</b>: %1$s]]></string>
    <string name="description">Description</string>
    <string name="known_for">Known for</string>
    <string name="known_for_value"><![CDATA[<b>Known for</b>: %1$s]]></string>
    <string name="works_for">Works for</string>
    <string name="speciality">Speciality</string>
    <string name="experience">Experience</string>
    <string name="agency_details">Agency Details</string>
    <string name="create_casting_call">Create Casting Call</string>
    <string name="looking_for">Looking for</string>
    <string name="role">Role</string>
    <string name="payment">Payment</string>
    <string name="assign_to">Assign to</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="hi_user">Hi!, %1$s</string>
    <string name="reviewed_workshop_name"><![CDATA[Reviewed: <b>%1$s</b>]]></string>


    <string name="user_type_title">Type of Account</string>
    <string name="user_type_subtitle">Choose the type of your account, be careful to change it is impossible</string>
    <string name="age_title">How old are you?</string>
    <string name="age_subtitle">Agencies may need it for specific roles</string>
    <string name="select_complexion">Please select your Complexion</string>
    <string name="height_title">How tall are you?</string>
    <string name="height_subtitle">Agencies may need it for specific roles</string>
    <string name="add_image_title">Add some images</string>
    <string name="add_image_subtitle">You can add minimum 2 and maximum 5 images</string>
    <string name="add_audition_video_title">Add Audition Video</string>
    <string name="add_audition_video_subtitle">Make a short audition video to flaunt your skills</string>
    <string name="click_to_upload">Click to Upload</string>

    <!--    CTA-->
    <string name="login_via_otp">Login via OTP</string>
    <string name="signup_via_otp">Signup via OTP</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="get_otp">GET OTP</string>
    <string name="register">Register</string>


    <string name="pick_a_region">Pick A Region</string>
    <string name="search_for_your_city">Search for your city</string>
    <string name="auto_detect_my_location">Auto Detect My Location</string>
    <string name="popular_cities">POPULAR CITIES</string>
    <string name="other_cities">OTHER CITIES</string>


    <!--    Validations-->
    <string name="validation_empty_name">Please enter name</string>
    <string name="validation_empty_dob">Please select Date of birth</string>
    <string name="validation_invalid_name">Please enter valid name</string>
    <string name="validation_empty_email">Please enter Email</string>
    <string name="validation_select_country">Please select country code</string>
    <string name="validation_empty_phone">Please enter phone</string>
    <string name="validation_invalid_phone">Please enter valid phone</string>
    <string name="validation_empty_started_in">Please select Start Date of Agency</string>
    <string name="validation_empty_description">Please enter Description</string>
    <string name="validation_empty_known_For">Please enter anything you are known for</string>
    <string name="validation_empty_speciality">Please select Speciality</string>
    <string name="validation_empty_experience">Please select Experience</string>
    <string name="validation_empty_works_for">Please select who you work for</string>
    <string name="validation_empty_gender">Please select Gender</string>
    <string name="validation_empty_role">Please enter Role</string>
    <string name="validation_empty_payment">Please enter Payment</string>
    <string name="validation_empty_age">Please select Age</string>
    <string name="validation_empty_complexion">Please select Complexion</string>
    <string name="validation_empty_volunteer">Please select Volunteer</string>


    <string name="workshop_details_temp">Realization of the patterns of their brain and that of the character\'s brain is the first thing which makes an actor aware about the reality of the situation/scene.\n\n
Neglecting these patterns is the first thing to abandon the reality of your character.\n\n
Creating a distinction between fictional and non-fictional characters.\n\n
•·– Production based master batch.\n
•·– Designed to create a process for you in which you can understand the nature of your body, mind and energy intensely so that are aware about the nature of your character\'s reality.•·– Designed to enhance your abilities to adapt fictional/non-fictional characters.\n
•·– Designed to catalyze your completeness with your ownself.\n
•·– Age - 16+\n
•·– Production in every six to seven months.\n
•·– For all aspiring actors, writers and directors.\n\n
Psychology and physiology are the ways to reach out to an individual\'s insight.\n
The situations may be same for all, but reactions differ so the characters differ.\n
That is the major difference between an actor which fits into reality and an actor which does not fit into reality.\n\n\n
~Zariya Theatre Group\n
    </string>

    <!-- Profile  -->
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="achievements">Achievements</string>
    <string name="progress_report">Progress Report</string>
    <string name="past_activities">Past Activities</string>
    <string name="casting_selections">Casting Selections</string>
    <string name="payment_method">Payment Method</string>
    <string name="privacy_and_settings">Privacy and Settings</string>
    <string name="help_and_support">Help And Support</string>
    <string name="sign_out">Sign Out</string>

    <!-- Checkout   -->
    <string name="almost_there">Almost there!</string>
    <string name="contact_details">Contact Details</string>
    <string name="offers">Offers</string>
    <string name="select_a_promo_code">Select a promo code</string>
    <string name="view_offers">View Offers</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="checkout_consent">By Proceeding, I express my consent to complete this transaction</string>

    <!-- Cart  -->
    <string name="your_cart_is_empty_now_explore_more">Your cart is empty now, Explore more</string>
    <string name="continue_shopping">Add Items</string>
    <string name="my_cart">My Cart</string>
    <string name="about">About</string>
    <string name="casting_calls">Casting Calls</string>
    <string name="add_to_cart">Add to Cart</string>


    <string-array name="actor_height">
        <item>Select your Height</item>
        <item>4 ft 0 inches</item>
        <item>4 ft 1 inches</item>
        <item>4 ft 2 inches</item>
        <item>4 ft 3 inches</item>
        <item>4 ft 4 inches</item>
        <item>4 ft 5 inches</item>
        <item>4 ft 6 inches</item>
        <item>4 ft 7 inches</item>
        <item>4 ft 8 inches</item>
        <item>4 ft 9 inches</item>
        <item>4 ft 10 inches</item>
        <item>4 ft 11 inches</item>
        <item>5 ft 0 inches</item>
        <item>5 ft 1 inches</item>
        <item>5 ft 2 inches</item>
        <item>5 ft 3 inches</item>
        <item>5 ft 4 inches</item>
        <item>5 ft 5 inches</item>
        <item>5 ft 6 inches</item>
        <item>5 ft 7 inches</item>
        <item>5 ft 8 inches</item>
        <item>5 ft 9 inches</item>
        <item>5 ft 10 inches</item>
        <item>5 ft 11 inches</item>
        <item>6 ft 0 inches</item>
    </string-array>

    <string-array name="actor_complexion">
        <item>Extremely Fair</item>
        <item>Fair</item>
        <item>Pale</item>
        <item>Medium</item>
        <item>Olive</item>
        <item>Naturally Brown</item>
        <item>Dark Brown</item>
        <item>Any</item>
    </string-array>

    <string-array name="popular_cities_array">
        <item>Mumbai</item>
        <item>Delhi-NCR</item>
        <item>Bengaluru</item>
        <item>Hyderabad</item>
        <item>Ahmedabad</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
    </string-array>

    <string-array name="agency_profile_tab">
        <item>ABOUT</item>
        <item>CASTING CALLS</item>
    </string-array>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Anyone</item>
    </string-array>

    <string-array name="age_range_array">
        <item>16–20 Years</item>
        <item>20–25 Years</item>
        <item>25–30 Years</item>
        <item>30–35 Years</item>
        <item>35–40 Years</item>
        <item>40+ Years</item>
        <item>Any</item>
    </string-array>


</resources>